# SmartChart-Database-Setup

./: .gitignore  ATHENA.md  README.md  SETUP.md  VERSIONS.md  pyproject.toml
scripts/mssql/registry/: registry_viewer_mssql_db_ddl.txt
scripts/mssql/registry/mssql/: column_size_change.sql
scripts/mssql/registry/registry_db/mssql/: case_log_ddl.txt  f_resource_deduplicate_ddl.txt  nlp_type_concept_data.txt
scripts/postgres/clarityNLP/latest/: clarity-nlp-postgres.ddl
scripts/postgres/concept_data/: viewer_api_metadata.sql
scripts/postgres/omop/5.4/: OMOPCDM_postgresql_5.4_constraints.sql  OMOPCDM_postgresql_5.4_primary_keys.sql
scripts/postgres/registry-manager/latest/omoponfhir_v5_4_setup/: obs_meas_column_size_change_ddl.txt  omoponfhir_schemas_create_ddl.txt
scripts/postgres/registry-manager/latest/registry-setup/: ONLY_FOR_EXISTING_SCHEMA_registry_caseinfo_update.sql
scripts/postgres/registry-viewer-api/1.1.0/: registry_viewer_db_ddl.txt
scripts/registry-manager/latest/omoponfhir_v5_4_setup/: OMOPCDM_postgresql_5.4_vocabulary_ONLY_ddl.sql
scripts/registry-manager/latest/omoponfhir_v5_4_setup/mssql/: obs_meas_column_size_change_ddl.txt  omoponfhir_f_cache_ddl.txt
scripts/registry-manager/latest/registry-setup/: README.md
scripts/registry-viewer-api/1.0.0/: registry_viewer_db_ddl.txt
scripts/registry-viewer-api/1.1.0/: registry_viewer_db_ddl.txt
scripts/review/: README.md
src/: database_config.json  main.py
src/dbmodels/: claritynlp.py  omop54.py  registry.py  viewer.py
src/utils/: builder.py  database.py
(+14 files in other folders)
